Added Power Plant section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -247,3 +247,14 @@
 	url={https://megaman.fandom.com/wiki/Boomer_Kuwanger}
 }
 
+@online{wiki:Power_plant,
+	author={{Power Plant Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Power_Plant_Stage}
+}
+
+@online{wiki:Spark_mandrill,
+	author={{Spark Mandrill}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Spark_Mandrill}
+}
