--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -3,7 +3,8 @@
 	\begin{itemize}
 		\item \hypertarget{miniboss:Anglerge}{Anglerge}
 		\item \hypertarget{miniboss:Bee_Blader}{Bee Blader}
-		\item \hypertarget{subboss:Mole Borer}{Mole Borer}
+		\item \hypertarget{miniboss:Mole_Borer}{Mole Borer}
+		\item \hypertarget{miniboss:Thunder_Slimer}{Thunder Slimer}
 		\item \hypertarget{miniboss:Utuboros}{Utuboros}
 	\end{itemize}
 
@@ -25,6 +26,7 @@
 	\item \hypertarget{enem:Gulpfer}{Gulpfer}
 	\item \hypertarget{enem:Gun_Volt}{Gun Volt}
 	\item \hypertarget{enem:Hoganmer}{Hoganmer}
+	\item \hypertarget{enem:Hotarion}{Hotarion}
 	\item \hypertarget{enem:Jamminger}{Jamminger}
 	\item \hypertarget{enem:Ladder_Yadder}{Ladder Yadder}
 	\item \hypertarget{enem:Lift Cannon}{Lift Cannon}
@@ -34,6 +36,7 @@
 	\item \hypertarget{enem:Ray_Bit}{Ray Bit}
 	\item \hypertarget{enem:Road_Attackers}{Road Attackers}
 	\item \hypertarget{enem:Rolling_Gabyoall}{Rolling Gabyoall}
+	\item \hypertarget{enem:Rush_Roader}{Rush Roader}
 	\item \hypertarget{enem:Scrap_Robo}{Scrap Robo}
 	\item \hypertarget{enem:Sea_Attacker}{Sea Attacker}
 	\item \hypertarget{enem:Sky_Claw}{Sky Claw}
@@ -45,3 +48,12 @@
 	\item \hypertarget{enem:Turn_Cannon}{Turn Cannon}
 
 \end{itemize}
+
+
+
+
+
+
+
+
+
