--- a/src/x1.tex
+++ b/src/x1.tex
@@ -236,12 +236,18 @@ Launch Octopus, the ``\textit{General of the Deep Sea}''\cite{book:MMX_Complete_
 %		\includegraphics[width=\linewidth]{figures/X1/Octopus_vortex.jpg}
 %		\caption{}
 %	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.5\linewidth]{figures/X1/Octopus_drain.jpg}
+			\caption{}
+	\end{subfigure}
 %	\begin{subfigure}{0.5\textwidth}
-	%		\centering
-	%		\includegraphics[width=\linewidth]{figures/X1/Octopus_leech.jpg}
-	%		\caption{}
-	%	\end{subfigure}
-	\caption{Launch Octopus attack: (a) Homing Torpedo,(b) Charged Homing Torpedo.}
+%		\centering
+%		\includegraphics[width=\linewidth]{figures/X1/Octopus_cut.jpg}
+%		\caption{}
+%	\end{subfigure}
+	
+	\caption{Launch Octopus attack: (a) Homing Torpedo, (b) Charged Homing Torpedo, (c) Vortex and (d) Draining. In (e) it is possible to see his tentacle cut off}
 \end{figure}
 
 In battle Octopus has two main techniques: Homing torpedo and Energy Drain. In reality he has a third technique, which consists in firing what can be considered a charged version of his Homing Torpedo. Both his types of missiles can be destroyed by shooting at them. Launch Octopus will always start the boss fight with a barrage of homing missile, to than switch to one of the other two weapons he has. Just like X, Octopus can fire a charged version of his homing missiles, which are piranha-shaped and homes much faster than their counterpart. Finally he has his Energy Drain attack. When performing this Octopus will first swim on top of the arena, either left or right, and then start spinning to create a whirlpool to suck X in. If he succeed he will start draining X energy to replenish his own, prolonging the fight. Octopus main weakness is the Rolling Shield, which deals him extra damage but can be hard to hit, due Octopus high mobility and the shield colliding with his missiles instead. However Octopus can be also heavily damaged by the Boomerang Cutter, which in three hits will sever his tentacles blocking him to perform his Energy Drain attack. 
@@ -336,7 +342,7 @@ Chill Penguin is 163 cm tall and 108 Kg heavy, despite the information screen on
 \end{figure}
 
 \section{Gallery}
-The Gallery Stage (or Energy Mines Ruins in \mhx) is the stage where controlled by Armored Armadillo. Peculiarity of this level are its mine cart which X can stand and, as soon as he does it, they start moving following the track, increasing their speed as they keep going and destroying all enemies that enter in contact with it. Hoever the player must be careful, as all the carts end their run into pits, bringing X down with them if he doesn't jump off at the right moment. This stage is also famous for containing the secret Light's capsule which teach X the Hadouken technique, as well as being the best place to farm health capsule and lives.
+The Gallery Stage (or Energy Mines Ruins in \mhx) is the stage controlled by Armored Armadillo. Peculiarity of this level are its mine cart which X can stand and, as soon as he does it, they start moving following the track, increasing their speed as they keep going and destroying all enemies that enter in contact with it. Hoever the player must be careful, as all the carts end their run into pits, bringing X down with them if he doesn't jump off at the right moment. This stage is also famous for containing the secret Light's capsule which teach X the Hadouken technique, as well as being the best place to farm health capsule and lives.
 
 The stage itself is rather simple. Immediately at the beginning a mine cart is present which brings the player forward in the level while also taking care of enemies, but that end its ride when it comes across a series of gaps, one of which it cannot jump and falls into. For that moment the player must have dismount from the cart. After this sequence only few small gaps and some enemies separate X from the next section, which begin when he has to fall off a long pit in the ground. Here as he touches the floor a Mole Borer will destroy the left wall and start chasing X. It is invincible and its roller can insta-kill X if he touches it. Here only two solutions are possible: the first one is to escape to the right, continuing in the level; the second one is, as soon as X reaches the ground, wall jump immediately to the left before the Mole Borer breaks the wall and then jump down, following it from behind (while also gaining acces to the sub tank). In both cases the player has to go right to continue, followed by the mechaniloid (which will eventually crash and explode) or not. After this section another mine cart waits, which will bring the player deeper in the level and, again, end its ride into a pit. Just like the before after this part another large hole in the ground is present and X has to fall off to proceed, meeting another Mole Borer once he lands. This time however he will land behind it, avoiding another chase and, on the other hand, allow the mechanilod to create a passage for the player, until it crashes and explodes again (the player may also want to destroy it since while going it also destroys the access to the heart tank) . Here there is the final cart X has to take to proceed. This mine cart brings X through many enemies until it reaches an opening on the mountain and flies off over a huge gap, impossible for X to jump. Once in the air the player must jump off the cart in order to land on the other side of the pit (or grab the wall if high enough), where the boss door is. While riding in the final parts a group of mechanical birds enemies will start spawning and fly alongside X. Since they fly the cart cannot destroy them, but X will have to, since they can mess up the final jump by hitting him and making him fall into the pit.
 
@@ -348,7 +354,7 @@ Following enemies are present in the stage\cite{wiki:Gallery}
 	\item \hyperlink{enem:Flammingle}{Flammingle} 
 	\item \hyperlink{enem:Metal_Wing}{Metal Wing} 
 	\item \hyperlink{enem:Metall_C-15}{Metall C-15} 
-	\item \hyperlink{miniboss:Mole Borer}{Mole Borer}
+	\item \hyperlink{miniboss:Mole_Borer}{Mole Borer}
 	\item \hyperlink{enem:Spiky}{Spiky}
 \end{itemize}
 
@@ -384,16 +390,16 @@ According information give, Armored Armadillo is 194 cm tall and 232 kg heavy, w
 The \textit{Factory Stage}(\textit{Prototype Weapons Plant} in \mhx)  is probably one of the most difficult stage among the eight, due to the high number of danger X can met and that can kill him instantly. The level takes place inside a factory which has been designated to weapons production, as the numerous conveyor belts, presses, and molten metal suggest and that X must face before reaching the boss. However if X manages to defeat Chill Penguin before facing this level, he will found the metal frozen solid, reducing considerably the danger level of the area, as he can stands on it whether he falls from a conveyor belt.
 \begin{figure}[h]
 	\centering
-	\begin{subfigure}{0.4\textwidth}
+	\begin{subfigure}{0.49\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Flame_fire.jpg}
+		\caption{}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
 		\centering
 		\includegraphics[width=\linewidth]{figures/X1/Flame_frozen.jpg}
 		\caption{}
-	\end{subfigure}
-%	\begin{subfigure}{0.49\textwidth}
-%		\centering
-%		\includegraphics[width=\linewidth]{figures/X1/Flame_molten.jpg}
-%		\caption{}
-%	\end{subfigure}\\
+	\end{subfigure}\\
 	\caption{Factory Stage before (a) and after (b)  defeating Chill Penguin}
 \end{figure}
 
@@ -441,11 +447,11 @@ As the previous power-ups, the Heart Tank too is ``hidden'' in the big room. In 
 
 \begin{figure}[h]
 	\centering
-%	\begin{subfigure}{0.4\textwidth}
-%		\centering
-%		\includegraphics[width=\linewidth]{figures/X1/Flame_heart_1.jpg}
-%		\caption{}
-%	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Flame_heart_1.jpg}
+		\caption{}
+	\end{subfigure}
 	\begin{subfigure}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\linewidth]{figures/X1/Flame_heart_2.jpg}
@@ -628,7 +634,14 @@ Among all other stages, the \textit{Tower Stage} (or \textit{Fortress Tower}) is
 
 The first part of the stage sees X climbing a series of platform placed in a zig-zag patter and with enemies on them, which will try to attack X while jumping from one to another and make him fall down. Next is a horizontal section in which \hyperlink{enem:Sine_Faller}{Sine Faller} will keep spawning and chasing after X which will have also to deal with laser traps, which will shoot X if he passes trough triggers while active. The traps cannot be destroyed, but it is possible to trigger them and avoid lasers if the player move fast enough. 
 
-The next part is pretty straightforward: it is another vertical section divided into different levels, one on top of another, each one with a \hyperlink{enem:Mega_Tortoise}{Mega Tortoise} in the center which will shoot bombs at X's position. These enemies cover are placed on top of platforms and, due their size, make difficult to proceed undamaged without disposing of them first (although it is still possible by precise dash-jumps). Once on top the player will reach an elevator with spikes all along the walls. As X stands on it, it will start ascending. While rising the elevator will go towards some platform with spike beneath them, which will insta-kill X if he isn't fast enough to dodge them. Furthermore other enemies will spawn and aim at X to obstacle his movements. As the elevator goes up it will start increasing its speed making more difficult to avoid obstacles. Near the end of its ride the elevator will slow down to let X dismount in time, before crashing against the spiked roof. During this part a trick can be performed: if X stands on the rightmost side of the elevator he will avoid all spiked platform, eliminating the major risk factor of this part. Next there are two other climbing sections, one on the outside with moving platform and enemies on top of them, and the last one, inside, again with enemies on top of moving platform and on walls as well. At the end of this last part the player will find the boss door.
+The next part is pretty straightforward: it is another vertical section divided into different levels, one on top of another, each one with a \hyperlink{enem:Mega_Tortoise}{Mega Tortoise} in the center which will shoot bombs at X's position. These enemies cover are placed on top of platforms and, due their size, make difficult to proceed undamaged without disposing of them first (although it is still possible by precise dash-jumps). Once on top the player will reach an elevator with spikes all along the walls. As X stands on it, it will start ascending. While rising the elevator will go towards some platform with spike beneath them, which will insta-kill X if he isn't fast enough to dodge them. Furthermore other enemies will spawn and aim at X to obstacle his movements. As the elevator goes up it will start increasing its speed making more difficult to avoid obstacles. Near the end of its ride the elevator will slow down to let X dismount in time, before crashing against the spiked roof. During this part a trick can be performed: if X stands on the rightmost side of the elevator he will avoid all spiked platform, eliminating the major risk factor of this part (see fig. \ref{tower_spike} or the video file \texttt{Tower\_spike\_skip.mp4} for more information). Next there are two other climbing sections, one on the outside with moving platform and enemies on top of them, and the last one, inside, again with enemies on top of moving platform and on walls as well. At the end of this last part the player will find the boss door.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/X1/Tower_spike_skip.jpg}
+	\caption{By standing in this precise position X will not collide with any spikes, even the lateral one, lowering the difficulty of this section.}
+	\label{tower_spike}
+\end{figure}
+
 
 This stage contains following enemies\cite{wiki:Tower}:
 
@@ -644,20 +657,88 @@ This stage contains following enemies\cite{wiki:Tower}:
 \end{itemize}
 
 \subsection{Heart Tank}
-This stage's Heart tank is hidden in plain sight, right at the end of the outside section,on a large platform near the entrance for the last stage's portion. While being easy to spot, is isn't as easy to get, especially during the stage's first run. Three methods exists to get it. The first and easiest way is to replay the stage after having acquired the Boomerang Cutter and use a boomerang to grub it from the tower's inside, since boomerangs pass trough wall. The second way is to use a charged Shotgun Ice from the entrance and ride the platform while midair, to perform a dash jump from it which will give X enough high to grub to the platform's edge. Finally is is also possible to reach the platform via a pixel-perfect dash-jump which gives X barely enough high to trigger a wall-jump of the platform's edge and subsequently reach its top and the Heart Tank (see \ref{X1:misc} for information on involved tricks).
+This stage's Heart tank is hidden in plain sight, right at the end of the outside section,on a large platform near the entrance for the last stage's portion. While being easy to spot, is isn't as easy to get, especially during the stage's first run. Three methods exists to get it. The first and easiest way is to replay the stage after having acquired the Boomerang Cutter and use a boomerang to grub it from the tower's inside, since boomerangs pass trough wall. The second way is to use a charged Shotgun Ice from the entrance and ride the platform while midair, to perform a dash jump from it which will give X enough high to grub to the platform's edge (see video file \texttt{kuwanger\_heart\_ice.mp4}). Finally it is also possible to reach the platform via a pixel-perfect dash-jump which gives X barely enough high to trigger a wall-jump of the platform's edge and subsequently reach its top and the Heart Tank (see \ref{X1:misc} for information on involved tricks). This last technique is known as \textit{Iceless}. 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=0.5\linewidth]{figures/X1/Tower_heart.jpg}
+	\caption{Tower Stage's Heart Tank location.}
+\end{figure}
+
 
 \subsection{Boomer Kuwanger}\label{boss:Boomerang_Kuwanger}
 Boomer Kuwanger (lately renamed \emph{Boomerang} Kuwanger) was a former Maverick Haunter of the 17th Elite Unit under the direct command of Sigma (and also partner of X and Zero in the \mhx remake). However due to his cold, analytic, almost nihilist\cite{book:MH_field_guide}, and cynical vision of the world, he has never had a true sense of justice nor ideals, acting only following logic and his own interest\cite{MHX:manual}. This has lead him to join Sigma's rebellion without interest in its meanings, but the true reasons of his choice has never been explained. Some sources suggest Kuwanger went Maverick and followed Sigma only has it was the most logical action\cite{MHX:manual}, due to his own interest\cite{wiki:Boomer_kuwanger} or even both\cite{book:MH_field_guide}. Other sources even suggest he went Maverick out of fun\cite{Xcoll1:Manual_X1} or out of spite for humans\cite{wayback:X_resources}. Whatever Boomer Kuwanger's reasons were, after joining Sigma he conquered the tower symbol of the city, to convert it into his own base.
 
 In battle Boomer Kuwanger attack with his signature ability, the instant transmission, which allow him to teleport across the arena, typically behind his opponent, to strike him with his horns. This teleportation ability worth him the title of  ``\textit{Blade Demon of Space and Time}''\cite{book:MMX_Complete_art}. Once Kuwanger reappears he will perform one attack between Boomerang Cutter and Death Lift. With the first one he will throw his horns toward X with a curved trajectory which will then travel back to him, as the name suggest, while when performing the second one, Death Lift, he will grub X with his mandibles and throw him into the ceiling dealing large damage. Finally Boomer Kuwanger also has a dash attack, where he dash toward X to damage him.
+ \begin{figure}[htp]
+	\centering
+	\begin{subfigure}{0.4\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Boomer_lift_1.jpg}
+		\caption{}
+	\end{subfigure}
+	\begin{subfigure}{0.3\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Boomer_lift_2.jpg}
+		\caption{}
+	\end{subfigure}\\
+	\begin{subfigure}{0.4\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Boomer_dash.jpg}
+		\caption{}
+	\end{subfigure}
+	\begin{subfigure}{0.4\linewidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/X1/Boomer_throw.jpg}
+		\caption{}
+	\end{subfigure}
+	\caption{Boomer Kuwanger attacks: (a),(b) Death Lift, (c) Dash and (d) Boomerang Cutter.}
+\end{figure}
+Dealing with Boomer Kuwanger isn't easy without his weakness, as the continuous teleporting makes him hard to hit with buster shots more than once. Furthermore the player has to keep moving in the arena to avoid Kuwanger to teleport near him and use his Death Lift attack for massive damage.
 
-Dealing with Boomer Kuwanger cannot be easy without his weakness, as the continuous teleporting makes him hard to hit with buster shots. Furthermore the player has to keep moving in the arena to avoid Kuwanger to teleport near him and use his Death Lift attack for massive damage. Moreover once hit Kuwanger will also teleport immediately. This means the player cannot hit him more than once, but it also means that with good aim and timing it is possible to prevent him to do any kind of attack. 
-
-The boss fight takes a turn when fought with Boomer Kuwanger main weakness: the Homing Torpedo\ref{Homing_torpedo}. Since missiles shot with this weapons lock onto enemies they can chase Kuwanger even when teleporting, meaning they will always hit him no matter his position. This drastically reduce the fight complexity as X can literally hide in a corner while shooting torpedoes which will automatically hit Boomer Kuwanger, also with increased damage as they're his weakness, triggering his teleportation and preventing him from doing any kind of action.
+The boss fight takes a turn when fought with Boomer Kuwanger main weakness: the Homing Torpedo (\ref{Homing_torpedo}). Since missiles shot with this weapons lock onto enemies they can chase Kuwanger even when teleporting, meaning they will always hit him no matter his position. This drastically reduce the fight complexity as X can literally hide in a corner while shooting torpedoes which will automatically hit Boomer Kuwanger, also with increased damage as they're his weakness.
 
 According to his specifications Boomer Kuwanger is 242 cm tall and 94 Kg heavy (again, different from in-game information which makes him shorter and lighter). More interesting however is the fact Boomer Kuwanger is one of few reploids known to have family relationship with another reploid (in this specific case a brother): Gravity Beetle.%\ref{Gravity_beetle}.
 
 \section{Power Plant}
+The \textit{Power Plant} (or \textit{Electromagnetic Power Plant} in the remake) stage is where Spark Mandrill resides. As to be expected from its name, this stage's main feature revolve around electricity in various form. However if the player manages to defeat Storm Eagle first the Death Rogumer will crash land onto this stage, cutting the power and removing part of the stage's hazards. 
+The first section of the stage consists in a maze of pipes split into different levels connected by ladders. Here, along with some enemies, electric sparks will spawn and travel along the ground, dealing damage on contact. Passed this part a dangerous one awaits: here the light will shut down at regular interval making difficult to spot the level layout, especially pits. Furthermore along the stage  \hyperlink{enem:Hotarion}{Hotarions} will spawn traveling horizontally while also illuminating the stage along their path. They can be rather dangerous as the move fast and, if the player doesn't know where they spawn, can hit X while jumping and make him fall into a pit.
+At the middle of the stage a sub-boss is present: the \hyperlink{miniboss:Thunder_slimer}{Thunder Slimer}. Its main attack consists in leap into X with his big hitbox or to block X by scattering round bubbles of slime which trap X in place, making him vulnerable to his lightning bolts which it will shoot after having absorbed electricity from the plant. If the player has cut off the power Thunder Slimer will no be able to perform this last attack.
+
+Passed the sub-boss there is a more traditional section with enemies placed along the way which ends with another platforming part with light going off. Once passed this section the player will reach the boss room.
+
+Following enemies appear in this stage\cite{wiki:Power_plant}:
+\begin{itemize}
+	\item \hyperlink{enem:Ball_De_Voux}{Ball De Voux}
+	\item \hyperlink{enem:Flammingle}{Flammingle}
+	\item \hyperlink{enem:Jamminger}{Jamminger}
+	\item \hyperlink{enem:Gun_Volt}{Gun Volt}
+	\item \hyperlink{enem:Hotarion}{Hotarion}
+	\item \hyperlink{enem:Mega_Tortoise}{Mega Tortoise}
+	\item \hyperlink{enem:Rush_Roader}{Rush Roader}
+	\item \hyperlink{miniboss:Thunder_Slimer}{Thunder Slimer}
+	\item \hyperlink{enem:Turn_Cannon}{Turn Cannon}
+\end{itemize}
+
+
+ 
+
+
+\subsection{Sub Tank}
+This stage's Sub Tank can be found right at the beginning of the stage in the tube ``maze''. It is however unreachable since the room where it is has no entrance. This force the player to use the Boomeran Cutter's ability to grub item from distance in order to get it.
+
+\subsection{Heart Tank}
+While not properly hidden, this stage Heart Tank can be easily missed if the player does not pay enough attention during the level. More in detail, the Heart Tank is hidden at the end of the corridor passed Thunder Slimer, before descending the ladder. It is placed in the rightmost corner, which players could easily avoid if they fall down immediately instead of climbing the wall.
+
+In order to get the collectible two option are possibles: by using again Boomerang Cutter's grub ability or with a accurate dash-jump from the wall.
+
+\subsection{Spark Mandrill}\label{boss:Spark_mandrill}
+Spark Mandrill was originally a Maverick Haunter of the 17th Elite unit directly under Sigma control. When the latter started his revolt, Mandrill followed his commander without questioning, thus being labeled as a Maverick. While not being very smart he compensated in raw power\cite{MHX:manual} which, also due his taste for electricity, made him the perfect candidate to seize the Power Plat, to private cities of electric power while also granting Sigma an energy source. Another main trait Mandrill was also know for was his laziness. In fact once seized the Power Plant, he left the remaining work to his subordinates, while he stayed in the sidelines napping and chowing of the electricity produced by the main generator\cite{wayback:X_resources}.
+
+Better known as the ``\textit{Quick-Fisted King of Lightning}'' Mandrill keeps faith to his title by fights against X mostly using melee attacks, but he can also use ranged attack in the form of his own Electric Spark whether the situation requires.
+
+Although his size, Mandrill can move quite fast, especially when using his punch attack which comes into two possible ways\cite{wiki:Spark_mandrill}: if X is near Mandrill he will straight hit him with a quick attack which can be hard to dodge due the close distance; meanwhile if the player is far from him, Mandrill while dash toward him while punching. This latter attack is easier to avoid since Mandrill's dash speed is relatively low, hence avoidable.  As said before Spark Mandrill can also attack from the distance using his Electric Spark. With this move Mandrill will punch the ground producing two orbs made of electricity which will travel in split directions along the ground and also along walls. These orbs move relatively fast but can be avoided with a jump at the right timing. Finally Mandrill will sometimes jump and hang to the ceiling and move toward X. When he passes below him, Mandrill will drop down trying to hit him.
+
+According to his specifications Spark Mandrill is 305cm tall and weights 394 Kg (slightly heavier than in-game information).
 \section{Forest}
 \section{Sigma Stage (1-4)}
 \section{Miscellaneous}\label{X1:misc} %wall clip glithc, seven pixel, auto edge grub flying hadoken %subt-tank + life farming
